tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__CollectingtheHyb-AAAAAAAAAAAAAAAAAAAIJA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2084,
  "prerequisites": [
    35
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you got lucky and found some bees in a village, put them in their houses next to some trees. Over time the bees will slowly pollinate the leaves of the trees. Using a grafter you can break the leaf blocks to retrieve a sapling 100%, useful for getting the forestry saplings. This doesn't seem to work with magical trees though. You can trade with villagers to get proven grafters that have a longer lifetime. Also investigate magic, you have heard rumors of long lasting grafters available to magicians.\n\nGregTech also offers a really nice tool, the Branch Cutter.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Collecting the Hybrids",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    35
  ],
  "rewards": [],
  "tasks": []
}
