tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__CommonBeech-AAAAAAAAAAAAAAAAAAAITw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2127,
  "prerequisites": [
    2123
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Common Beech gives you access to the Faster maturity attribute. Breed them from Silver Birch and Apple Oak.\n\nNote: For all tree breeding quests, the required tree must be a pure species, not a hybrid, and must be scanned.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Common Beech",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2123
  ],
  "rewards": [],
  "tasks": []
}
